2011-12-19  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-refresh-files): verify that the
	buffer visits a real file (not a directory) before refreshing.

2011-09-23  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-steal-lock): use "cleartool co
	-usehijack" to claim hijacked files.

2011-09-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): use
	`file-relative-name' to normalize the file name.

2011-07-11  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): recognize
	missing and secial selection files.
	(vc-clearcase-dir-status): remove the -visible arg from the ls
	comand -- we want info about missing files too
	(vc-clearcase-dir-printer): new function

2011-06-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-diff): make sure the *vc-diff*
	buffer is read-only, to enable diff-mode commands.

2011-06-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-refresh-on-checkin)
	(ucm-actb-refresh-activity): new functions, called when check-in
	happens
	(ucm-unload-hook): new function.  Ensure the library can be
	unloaded properly.

2011-05-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-version): updated for release 3.6

2011-05-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-revision-completion-table): doc
	fix.

2011-05-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-delete-activity): new function

2011-04-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-start-logentry): refadvice removed
	(clearcase-finish-checkout-reserved)
	(clearcase-finish-checkout-unreserved): functions removed
	(vc-clearcase-checkout): invoke `log-edit' directly instead via
	`vc-start-entry'
	(clearcase-bind-checkout-comment): new function, added to
	`vc-before-checkin-hook'

	(vc-clearcase-revision-table)